--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "5.4.*"
+        "guzzlehttp/guzzle": "6.*",
+        "laravel/framework": "5.4.*",
+        "nesbot/carbon": "1.*",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "2.*",
